@@ -1,3 +1,9 @@
+2011-06-27 Emilio Meschi <emilio.meschi@cern.ch>
+
+	* tag V02-04-11
+	* comment out scalers flashlist refresh
+	* refresh microstate legenda every 10 lumisections
+
 2011-06-08 Emilio Meschi <emilio.meschi@cern.ch>
 
 	* tag V02-04-10
